fix: overflow in ham (done)

--- a/src/Styles/global.css
+++ b/src/Styles/global.css
@@ -43,6 +43,7 @@ Link {
     display: flex;
     align-items: center;
     overflow-x: hidden;
+    position: relative;
 }
 
 .nav-logo {
